# orthanc-setup-samples

docker/ohif/: .env  README.PY.MD  README.plati.MD  main.py  pyproject.toml
docker/ohif/plati/: manage.py
docker/ohif/plati/plati/: asgi.py  settings.py  urls.py  wsgi.py
